mise à jour pour spip 3.0

--- a/contenu/article-messagerie.html
+++ b/contenu/article-messagerie.html
@@ -18,7 +18,7 @@
 </div><!-- #chapo-conteneur .introduction -->]
 
 <div class="contenu clearfix">
-	<p class="retour-profil"><a class="bouton medium" href="[(#URL_PAGE{profil}|parametre_url{id_auteur,#SESSION{id_auteur}})]"><:candidatures:retour_profil:></a></p>
+	<p class="retour-profil"><a class="bouton medium" href="[(#URL_PAGE{profil}|parametre_url{id_auteur,#SESSION{id_auteur}})]"><:fraap_candidatures:retour_profil:></a></p>
 	<div class="contenu-principal">
 		<div class="surlignable">
 			[<div class="#EDIT{texte} texte textecourant">(#TEXTE|image_reduire{220,0})</div>]
