--- a/formulaires/test.html
+++ b/formulaires/test.html
@@ -4,7 +4,7 @@
 <form action="#ENV{action}" method="post"><div>
     #ACTION_FORMULAIRE{#ENV{action}}
     <ul>
-        [(#SAISIE{input,ecole,label=<:candidatures:label_ecole:>})]
+        [(#SAISIE{input,ecole,label=<:fraap_candidatures:label_ecole:>})]
     </ul>
     <p class="boutons"><input type="submit" class="submit" value="<:pass_ok:>" /></p>
 </div></form>
