--- a/inclure/prive-liste-candidatures.html
+++ b/inclure/prive-liste-candidatures.html
@@ -37,7 +37,7 @@
 				<td rowspan="8">[(#DATE|affdate{d/m/Y})]</td>
 				<td rowspan="8">[(#MAJ|affdate{d/m/Y})]</td>
 				<th>Du</th><td>[(#DATE_DEBUT|affdate{d/m/Y})]</td>
-				<td class="supprimer" rowspan="8"><a href="[(#URL_ACTION_AUTEUR{supprimer_candidature,#ID_CANDIDATURE,#SELF})]" class="bt supprimer" title="<:candidatures:label_bouton_supprimer_candidature:>">X</a></td>
+				<td class="supprimer" rowspan="8"><a href="[(#URL_ACTION_AUTEUR{supprimer_candidature,#ID_CANDIDATURE,#SELF})]" class="bt supprimer" title="<:fraap_candidatures:label_bouton_supprimer_candidature:>">X</a></td>
 			</tr>
 			<tr>
 				<th>Au</th><td>[(#DATE_FIN|affdate{d/m/Y})]</td>
