--- a/inclure/prive-liste-inscriptions.html
+++ b/inclure/prive-liste-inscriptions.html
@@ -38,8 +38,8 @@
 				<td>[(#PRENOM|sinon{pas de prénom})]</td>
 				<td>#EMAIL</td>
 				<td>
-					[(#ACTIVITE|=={1}|oui)<:candidatures:type_1:>]
-					[(#ACTIVITE|=={2}|oui)<:candidatures:type_2:>]
+					[(#ACTIVITE|=={1}|oui)<:fraap_candidatures:type_1:>]
+					[(#ACTIVITE|=={2}|oui)<:fraap_candidatures:type_2:>]
 					[(#ACTIVITE|non)non renseigné]
 				</td>
 				<td>
