--- a/inclure/session-info.html
+++ b/inclure/session-info.html
@@ -12,5 +12,5 @@
 
 [(#REM) menu d'identification ]
 <div id="menu-identification">
-	#INCLURE{fond=inclure/menu, env, identifiant=identification}
+	<INCLURE{fond=inclure/menu, env, identifiant=identification} />
 </div><!-- #identification -->
