--- a/prive/exec/candidatures.html
+++ b/prive/exec/candidatures.html
@@ -1,5 +1,5 @@
 [(#AUTORISER{voir,candidatures})
-	<h1><:candidatures:liste_des_candidatures:></h1>
+	<h1><:fraap_candidatures:liste_des_candidatures:></h1>
 
 	<div class='ajax'>
 		<INCLURE{fond=inclure/prive-liste-candidatures,env,ajax}>
