--- a/formulaires/editer_candidature.html
+++ b/formulaires/editer_candidature.html
@@ -20,52 +20,52 @@
 		<ul>
 			<li id="localisation" class="fieldset">
 				<fieldset>
-					<h3 class="legend"><:candidatures:label_localisation_geo_inscription:></h3>
+					<h3 class="legend"><:fraap_candidatures:label_localisation_geo_inscription:></h3>
 					<ul class="fields">
 						[(#SAISIE{checkbox,regions,
-							label=<:candidatures:label_regions_inscription:>,
+							label=<:fraap_candidatures:label_regions_inscription:>,
 							obligatoire=oui,
 							datas=#GET{r}})]
-						[(#SAISIE{input, ville_stage, label=<:candidatures:label_ville_inscription:>, explication=<:candidatures:info_saisie_ville_stage:>, class=text})]
+						[(#SAISIE{input, ville_stage, label=<:fraap_candidatures:label_ville_inscription:>, explication=<:fraap_candidatures:info_saisie_ville_stage:>, class=text})]
 					</ul>
 				</fieldset>
 			</li>
 			<li id="disponibilite" class="fieldset">
 				<fieldset>
-					<h3 class="legend"><:candidatures:label_dispo_inscription:></h3>
+					<h3 class="legend"><:fraap_candidatures:label_dispo_inscription:></h3>
 					<ul class="fields enligne">
 						[(#SAISIE{date, date_debut,
-							label=<:candidatures:label_date_debut:>,
+							label=<:fraap_candidatures:label_date_debut:>,
 							obligatoire=oui,
-							explication=<:candidatures:info_format_date:>})]
+							explication=<:fraap_candidatures:info_format_date:>})]
 						[(#SAISIE{date, date_fin,
-							label=<:candidatures:label_date_fin:>,
+							label=<:fraap_candidatures:label_date_fin:>,
 							obligatoire=oui,
-							explication=<:candidatures:info_format_date:>})]
+							explication=<:fraap_candidatures:info_format_date:>})]
 					</ul>
 				</fieldset>
 			</li>
 			<li id="formation" class="fieldset">
 				<fieldset>
-					<h3 class="legend"><:candidatures:label_cadre_stage:></h3>
+					<h3 class="legend"><:fraap_candidatures:label_cadre_stage:></h3>
 					<ul class="fields enligne">
-						[(#SAISIE{input,ecole,label=<:candidatures:label_ecole:>,obligatoire=oui})]
-						[(#SAISIE{input,ville_ecole,label=<:candidatures:label_ville_consultation:>})]
-						[(#SAISIE{input,diplome,label=<:candidatures:label_diplome:>,obligatoire=oui})]
-						[(#SAISIE{input,niveau,label=<:candidatures:label_diplome_niveau:>,obligatoire=oui})]
+						[(#SAISIE{input,ecole,label=<:fraap_candidatures:label_ecole:>,obligatoire=oui})]
+						[(#SAISIE{input,ville_ecole,label=<:fraap_candidatures:label_ville_consultation:>})]
+						[(#SAISIE{input,diplome,label=<:fraap_candidatures:label_diplome:>,obligatoire=oui})]
+						[(#SAISIE{input,niveau,label=<:fraap_candidatures:label_diplome_niveau:>,obligatoire=oui})]
 					</ul>
 				</fieldset>
 			</li>
 			<li id="activites" class="fieldset">
 				<fieldset>
-					<h3 class="legend"><:candidatures:label_activites_inscription:></h3>
+					<h3 class="legend"><:fraap_candidatures:label_activites_inscription:></h3>
 					<ul class="fields">
 						[(#SAISIE{checkbox,competences_offre,
-							label=<:candidatures:label_competences_offre_inscription:>,
+							label=<:fraap_candidatures:label_competences_offre_inscription:>,
 							obligatoire=oui,
 							datas=#GET{c}})]
 						[(#SAISIE{checkbox,competences_recherche,
-							label=<:candidatures:label_competences_recherche_inscription:>,
+							label=<:fraap_candidatures:label_competences_recherche_inscription:>,
 							obligatoire=oui,
 							datas=#GET{c}})]
 					</ul>
