--- a/formulaires/messages_envoyes.html
+++ b/formulaires/messages_envoyes.html
@@ -1,10 +1,10 @@
+#CACHE{0}
 <div class='ajax'>
 <BOUCLE_envoyes(MESSAGES){id_auteur=#SESSION{id_auteur}}{statut!=poub}{pagination 1}{!par date_heure}>
 <div class="formulaire_spip formulaire_#ENV{form}" id="formulaire_#ENV{form}#ENV{id}">
 <br class='bugajaxie' />
 [<div class="reponse_formulaire reponse_formulaire_ok">(#ENV*{message_ok})</div>]
 [<div class="reponse_formulaire reponse_formulaire_erreur">(#ENV*{message_erreur})</div>]
-[(#ENV{editable})
 <form method='post' action='#ENV{action}#formulaire_#ENV{form}#ENV{id}' enctype='multipart/form-data' class='ajax'>
 
 [(#REM) declarer les hidden qui declencheront le service du formulaire
@@ -24,22 +24,20 @@ parametre : url d'action ]
 <option value='none'><:ecrire_message:selection_aucun:></option>
 <option value='all'><:ecrire_message:selection_tous:></option>
 </select>
-<input type="submit" name='effacer' class='submit bouton xsmall' value="<:ecrire_message:label_effacer:>" />
+<input type="submit" name='effacer' class='submit' value="<:ecrire_message:label_effacer:>" />
 </li></ul></fieldset>
 
 <INCLURE{fond=liste/messages_envoyes}{ajax}{id_auteur=#SESSION{id_auteur}}{id_message=#EVAL{_request('id_message')}}{date_last=#DATE_HEURE}{nombre=#GRAND_TOTAL}{env}>
 </form>
-]
 </div>
-<script type='text/javascript'>(function($){
-	$(function(){
-		$('select#selection').change(function(){
-			var val = $(this).attr('value');
-			if (val=='none') $('ul.envoyes div.message input[type=checkbox]').attr('checked','');
-			if (val=='all') $('ul.envoyes div.message input[type=checkbox]').attr('checked','checked');
-		});
-	});
-}(jQuery));
+<script type='text/javascript'>
+    $(document).ready(function(){
+        $('select#selection').change(function(){
+                var val = $(this).val();
+                if (val=='none') $('ul.envoyes div.message input[type=checkbox]').prop('checked',false);
+                if (val=='all') $('ul.envoyes div.message input[type=checkbox]').prop('checked',true);
+        });
+    });
 </script>
 </BOUCLE_envoyes>
 <:messagerie:aucun_message_envoye:>
