--- a/formulaires/stages_inscription.html
+++ b/formulaires/stages_inscription.html
@@ -5,30 +5,30 @@
 [(#ENV{editable})
 <form method="post" action="#ENV{action}">
 	#ACTION_FORMULAIRE{#ENV{action}}
-	<p class='intro'><:candidatures:info_inscription:></p>
+	<p class='intro'><:fraap_candidatures:info_inscription:></p>
 
 	<ul>
 		<li class="fieldset">
 			<fieldset>
-				<h3 class="legend"><:candidatures:legende_identite:></h3>
+				<h3 class="legend"><:fraap_candidatures:legende_identite:></h3>
 				<ul class="fields">
 					<li class='saisie_nom obligatoire[ (#ENV*{erreurs}|table_valeur{nom}|oui)erreur]'>
-						<label for="nom"><:candidatures:nom:></label>
+						<label for="nom"><:fraap_candidatures:nom:></label>
 						[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{nom})</span>]
 						<input type="text" class="text" name="nom" id="nom" value="#ENV{nom}" size="30" />
 					</li>
 					<li class='saisie_prenom obligatoire[ (#ENV*{erreurs}|table_valeur{prenom}|oui)erreur]'>
-						<label for="prenom"><:candidatures:prenom:></label>
+						<label for="prenom"><:fraap_candidatures:prenom:></label>
 						[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{prenom})</span>]
 						<input type="text" class="text" name="prenom" id="prenom" value="#ENV{prenom}" size="30" />
 					</li>
 					<li class="saisie_activite obligatoire[ (#ENV*{erreurs}|table_valeur{activite}|oui)erreur]">
-						<label for="activite"><:candidatures:label_activite:></label>
+						<label for="activite"><:fraap_candidatures:label_activite:></label>
 						[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{activite})</span>]
 						<select name="activite" id="activite">
-							<option value="0"><:candidatures:type_defaut:></option>
-							<option value="1"[ selected="(#ENV{activite}|=={1}|oui)selected"]><:candidatures:type_1:></option>
-							<option value="2"[ selected="(#ENV{activite}|=={2}|oui)selected"]><:candidatures:type_2:></option>
+							<option value="0"><:fraap_candidatures:type_defaut:></option>
+							<option value="1"[ selected="(#ENV{activite}|=={1}|oui)selected"]><:fraap_candidatures:type_1:></option>
+							<option value="2"[ selected="(#ENV{activite}|=={2}|oui)selected"]><:fraap_candidatures:type_2:></option>
 						</select>
 					</li>
 				</ul>
@@ -36,7 +36,7 @@
 		</li>
 		<li class="fieldset">
 			<fieldset>
-				<h3 class="legend"><:candidatures:legende_identifiants:></h3>
+				<h3 class="legend"><:fraap_candidatures:legende_identifiants:></h3>
 				<ul class="fields">
 					<li class='saisie_mail obligatoire[ (#ENV*{erreurs}|table_valeur{mail}|oui)erreur]'>
 						<label for="mail"><:form_pet_votre_email:></label>
@@ -44,12 +44,12 @@
 						<input type="text" class="text" name="mail" id="mail" value="#ENV{mail}" size="30" />
 					</li>
 					<li class="saisie_pass obligatoire[ (#ENV*{erreurs}|table_valeur{pass}|oui)erreur]">
-						<label for="pass"><:candidatures:label_pass:></label>
+						<label for="pass"><:fraap_candidatures:label_pass:></label>
 						[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{pass})</span>]
 						<input type="password" name="pass" value="#ENV{pass}" id="pass" class="password">
 					</li>
 					<li class="saisie_pass2 obligatoire[ (#ENV*{erreurs}|table_valeur{pass2}|oui)erreur]">
-						<label for="pass2"><:candidatures:label_pass2:></label>
+						<label for="pass2"><:fraap_candidatures:label_pass2:></label>
 						[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{pass2})</span>]
 						<input type="password" name="pass2" value="#ENV{pass2}" id="pass2" class="password">
 					</li>
@@ -61,7 +61,7 @@
 				[<span class="erreur_message">(#ENV*{erreurs}|table_valeur{conditions})</span>]
 				<input type="checkbox" name="conditions" id="conditions" value="1"[ checked="(#ENV{conditions}|=={1}|oui)checked"]>
 				<label for="">
-					<a href="[(#GET{url_conditions})]" rel="nofollow" onclick="if (jQuery.modalbox) {jQuery.modalbox('[(#GET{url_conditions}|parametre_url{var_zajax,contenu})]');return false;}" ><:candidatures:label_conditions_inscription_stage:></a>
+					<a href="[(#GET{url_conditions})]" rel="nofollow" onclick="if (jQuery.modalbox) {jQuery.modalbox('[(#GET{url_conditions}|parametre_url{var_zajax,contenu})]');return false;}" ><:fraap_candidatures:label_conditions_inscription_stage:></a>
 				</label>
 					<!-- class='mediabox boxIframe boxWidth-960px boxHeight-800px' -->
 			</div>
