--- a/titre/page-candidature.html
+++ b/titre/page-candidature.html
@@ -1,3 +1,3 @@
 <h1 class="h1">
-	[(#ENV{id_candidature}|?{<:candidatures:info_modifier_candidature:>,<:candidatures:info_depot_candidature:>})]
+	[(#ENV{id_candidature}|?{<:fraap_candidatures:info_modifier_candidature:>,<:fraap_candidatures:info_depot_candidature:>})]
 </h1>
